--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="do_you_have_an_account">Do you have an account?</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm password</string>
+    <string name="menu">menu</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
