--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="menu">menu</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="order">Order</string>
+    <string name="cart">Cart</string>
+    <string name="profile">Profile</string>
+    <string name="Home">Home</string>
+    <string name="store">Store</string>
+    <string name="all_categories">All Categories</string>
+    <string name="most_popular">Most popular</string>
+    <string name="view_all"><![CDATA[View all >]]></string>
 </resources>
